--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -121,6 +121,8 @@
 	commentstyle     = \itshape\color{yellow!40!black},
 }
 
+% A code style for C++ codes, which will be excluded by clang-format.
+% Usefull eg. showing preprocessor directives, and multiple inclusion of the same file (those would be removed by clang-format)
 \lstdefinestyle{customcpreproc}{%
   style = customc,
 }
