adding cmake support

--- a/book/cpp_book/cpp_book.tex
+++ b/book/cpp_book/cpp_book.tex
@@ -1,11 +1,11 @@
 \documentclass[a4paper,11.5pt, table]{article}
 
-\input{../include/preamble.tex}
+\input{../../include/preamble.tex}
 
 % Defining a default image folder.
-\graphicspath{{../include/img/}}
+\graphicspath{{../../include/img/}}
 \makeatletter
-\def\input@path{{../include/img/}}
+\def\input@path{{../../include/img/}}
 \makeatother
 
 \begin{document}
@@ -50,16 +50,16 @@ int main()
 	\end{titlepage}
 	\tableofcontents
 	\pagebreak
-	\subfile{book/01gy_cpp/01gy_cpp.tex}
-	\subfile{book/02gy_cpp/02gy_cpp.tex}
-	\subfile{book/03gy_cpp/03gy_cpp.tex}
-	\subfile{book/04gy_cpp/04gy_cpp.tex}
-	\subfile{book/05gy_cpp/05gy_cpp.tex}
-	\subfile{book/06gy_cpp/06gy_cpp.tex}
-	\subfile{book/07gy_cpp/07gy_cpp.tex}
-	\subfile{book/08gy_cpp/08gy_cpp.tex}
-	\subfile{book/09gy_cpp/09gy_cpp.tex}
-	\subfile{book/10gy_cpp/10gy_cpp.tex}
-	\subfile{book/11gy_cpp/11gy_cpp.tex}
-	\subfile{book/12gy_cpp/12gy_cpp.tex}
+	\subfile{../01gy_cpp/01gy_cpp.tex}
+	\subfile{../02gy_cpp/02gy_cpp.tex}
+	\subfile{../03gy_cpp/03gy_cpp.tex}
+	\subfile{../04gy_cpp/04gy_cpp.tex}
+	\subfile{../05gy_cpp/05gy_cpp.tex}
+	\subfile{../06gy_cpp/06gy_cpp.tex}
+	\subfile{../07gy_cpp/07gy_cpp.tex}
+	\subfile{../08gy_cpp/08gy_cpp.tex}
+	\subfile{../09gy_cpp/09gy_cpp.tex}
+	\subfile{../10gy_cpp/10gy_cpp.tex}
+  \subfile{../11gy_cpp/11gy_cpp.tex}
+	\subfile{../12gy_cpp/12gy_cpp.tex}
 \end{document}
