--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -10,6 +10,7 @@
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
+\usepackage{colortbl}
 %%%%%%% Basic packages end %%%%%%%
 
 %%%%%% Packages required for this document begin %%%%%%
